--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   font_awesome_flutter: ^10.7.0
   share_plus: ^7.2.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
